 26. New command: MEND, for invoking the proper common skill.  Mend spell renamed to Lesser Mend.
 27. Gaoler can now wear leather.
 28. Temporary skills now show up in the SKILLS/SPELLS/etc command as dark grey.
 29. You can no longer cast speak or cast verbal spells unless you can breathe where you are.
 30. ALIAS now supports a copy command.
 31. New skill: Stoicism

# Build 5.10.2 Release 4/28/2023
  *  DATABASE CHANGED! (Enlarged CMDATE, and new expiration date added to CMJRNL table)
  1. GMODIFY can now affect Areas.
  2. New Races; Mustalids, Badger, Otter, Wolverine, Giant Otter, Dire Otter, Mustie
  3. Genders are now defined in lists.ini
  4. Socials update
  5. New Deviations features: mob power levels, sorting
  6. New Deviations button in the MUDGrinder map and room editors
  7. New Chants: Summon Squall
  8. Looking UP into a generated sky now gives some basic info.
  9. New Exit type: Skyway -- for supporting the above.
 10. New Achievement type: CHARITY
 11. New Disable flag: FATIGUE
 12. New skill: Await Clan Ship
 13. The "Know Plants" skill will now report on edible-ness.
 14. Some divination spells are now more mob-follower-friendly. (e.g. Find Directions)
 15. New Spell "Majesty", the effects of which can only be wished for.
 16. Prop_ShortEffects expanded to include remotely-cast effects also.
 17. ACCOUNT command can now show chars with waiting mail, or missed tells.
 18. Prop_WearAdjuster allows dressing and content manipulation, from outside (saddlebags).
 19. New item: GenBagOfHolding
 20. REMOVE command can now target a wear location.
 21. Warrants skill can now accept a filter argument
 22. Shopkeepers listing their own inventory can see amount of stock.
 23. WillQualify and Qualify commands now have UNIQUE argument.
 24. New INI entry: XPMOD, and changes to Prop_ModExperience also.
 25. Common Account menu now configurable (help/acctmenu.txt)
 26. New forum posts now support attachments.